force-app/main/default/objects/SVMXC__Offline_Object__c/SVMXC__Offline_Object__c.object-meta.xml
<CustomObject>
    <description>This object is used to store configuration of objects and data sets associated with a ServiceMax Offline profile.</description>
    <label>Offline Object</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offline Objects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>