force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__Allow_API_Access__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Allow_API_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow API Access</label>
    <type>Checkbox</type>
</CustomField>