force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__Child_To_Parent_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Child_To_Parent_Field_Name__c</fullName>
    <description>For child objects, this has the API name of the field that connects it to its parent object.</description>
    <inlineHelpText>For child objects, this has the API name of the field that connects it to its parent object.</inlineHelpText>
    <label>Child To Parent Field Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>