force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__Lock_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Lock_Criteria__c</fullName>
    <description>Offline query builder representation of criteria to block editing of records in offline</description>
    <inlineHelpText>Offline query builder representation of criteria to block editing of records in offline</inlineHelpText>
    <label>Lock Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>