force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__Offline_Profile__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Offline_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Profile to which this object belongs</description>
    <inlineHelpText>Offline Profile to which this object belongs</inlineHelpText>
    <label>Offline Profile</label>
    <referenceTo>SVMXC__ServiceMax_Config_Data__c</referenceTo>
    <relationshipLabel>Datasets For This Profile</relationshipLabel>
    <relationshipName>Offline_Object</relationshipName>
    <type>Lookup</type>
</CustomField>