force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__Retain_Old_Records__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Retain_Old_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Offline Client user can retain old, unused reference records of this object type</description>
    <inlineHelpText>Indicates if the Offline Client user can retain old, unused reference records of this object type</inlineHelpText>
    <label>Retain Old Records</label>
    <type>Checkbox</type>
</CustomField>