force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__Tab_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Tab_Order__c</fullName>
    <description>Default tab order</description>
    <inlineHelpText>Default tab order</inlineHelpText>
    <label>Tab Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>