force-app/main/default/objects/SVMXC__Offline_Object__c/fields/SVMXC__User_Defined__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__User_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this object is automatically included due to ServiceMax functionality or explicitly added by the user</description>
    <inlineHelpText>Indicates if this object is automatically included due to ServiceMax functionality or explicitly added by the user</inlineHelpText>
    <label>User Defined?</label>
    <type>Checkbox</type>
</CustomField>